--- a/HTML Potluck Project/css/style.css
+++ b/HTML Potluck Project/css/style.css
@@ -4,3 +4,16 @@ h1 {
 h5 {
     text-align: center;
 }
+h2 {
+    text-align: center;
+}
+p {
+    text-align: center;
+}
+h3 {
+    text-align: center;
+}
+ul, ol {
+    text-align: center;
+    list-style-position: inside;
+}
