--- a/10-trials/css/style.css
+++ b/10-trials/css/style.css
@@ -19,3 +19,32 @@ color: green;
 #p5 {
     background-color: yellow;
 }
+#p6 {
+    font-weight: bold;
+}
+#p7 {
+    font-style: italic;
+}
+#p7-2 {
+    font-weight: bold;
+}
+#p8 {
+    text-decoration: underline;
+}
+#h-p9 {
+    font-size: 36px;
+}
+#eb-p10 {
+    text-align: center;
+    font-size: 12px;
+    font-weight: bold;
+}
+#h-p10 {
+    text-align: center;
+    font-size: 48px;
+}
+#sub-p10 {
+    text-align: center;
+    font-size: 24px;
+    font-style: italic;
+}
