--- a/floating-color-palettes/css/style.css
+++ b/floating-color-palettes/css/style.css
@@ -1,8 +1,12 @@
 .color-palette {
-    box-shadow: 6px 6px 12px #989898;
+box-shadow: 6px 6px 12px #989898;
 text-align: center;
 margin: 24px; 
 padding: 24px; 
+}
+.color {
+    margin: 0px;
+    padding: 24px;
 }
 #p1-c1 {
 background-color: #F6AA1C;
@@ -10,6 +14,24 @@ background-color: #F6AA1C;
 #p1-c2 {
 background-color: #BC3908;
 }
-#p1-c2 {
+#p1-c3 {
 background-color: #941B0C;
+}
+#p2-c1 {
+background-color: #3772FF;
+}
+#p2-c2 {
+background-color: #DF2935;
+}
+#p2-c3 {
+background-color: #FDCA40;
+}
+#p3-c1 {
+    background-color: #5C415D;
+}
+#p3-c2 {
+    background-color: #F6F7EB;
+}
+#p3-c3 {
+    background-color: #E94F37;
 }
