--- a/final-eval/css/style.css
+++ b/final-eval/css/style.css
@@ -26,7 +26,6 @@ body {
     justify-content: center;
     align-items: center;
     gap: 50px;
-
     width: 100%;
     margin: 0 auto;
 }
@@ -44,14 +43,14 @@ img {
     text-align: center;
 }
 .braah-one-regular {
-  font-family: "Braah One", sans-serif;
-  font-weight: 400;
-  font-style: normal;
+    font-family: "Braah One", sans-serif;
+    font-weight: 400;
+    font-style: normal;
 }
 .pacifico-regular {
-  font-family: "Pacifico", cursive;
-  font-weight: 400;
-  font-style: normal;
+    font-family: "Pacifico", cursive;
+    font-weight: 400;
+    font-style: normal;
 }
 a {
     display: inline-block;
@@ -70,10 +69,10 @@ a {
     background-color: green;
 }
 #btn-2:hover {
-    background-color: lightcoral
+    background-color: lightcoral;
 }
 #btn-2 {
-    background-color: red
+    background-color: red;
 }
 .centered-hero {
     position: relative;
